# SP-GIES

./: .gitmodules  GENIE3.py  LICENSE.md  README.md  compare_algs.py  convert_dream4.py  create_random_data.py  environment.yml  gen_data.sh  gen_scaling_data.sh  install.R  intervention.py  learner.py  metrics.py  rank_interventions.py  run_all_datasets.R  run_genie.py  run_igsp.py  setup.cfg  setup.py  sl_landscape_mini.py  sp_gies.py  sp_gies_parallel.py  strategies.py  utils.py
Python_scripts/: check_MEC.py  run_genie.py  run_igsp.py  sp_gies.py  sp_gies_parallel.py  utils.py
R_scripts/: GIES.R  IGSP.R  README.md  SP-GIES.R  identifiability.R  run_all_datasets.R  run_dream4.R  run_random_large.R  run_random_small.R  run_regulondb.R  scaling_study.R  sp-gies-adj_mat.csv
SP-GIES/: GIES.R  SP-GIES.R  run_all_datasets.R  scaling_SP-GIES_vs_GIES.R  sp_gies.py
causal_learning/: check_MEC.py  sp_gies.py  sp_gies_parallel.py  utils.py
data/insilico_size10_3/: adj_mat.csv
data/regulondb/: genes.txt  (+4 more)
examples/: compare_algs.py  convert_dream4.py  create_random_data.py  gen_data.sh  run_igsp.py  run_subgraph_regdb.py  use_sp_gies.ipynb
insilico_size10_3/: adj_mat.csv  network.txt
regulondb/: adj_mat.csv  analyze_regdb.py  clr_skel_sp-gies-adj_mat.csv  clr_skel_subgraph.csv  clr_skel_subgraph_sp-gies-adj_mat.csv  data_smaller_clr_subgraph.csv  data_smaller_clr_subgraph_larger.csv  data_smaller_w_header.csv  ground_skel_subgraph.csv  make_true_skel.py  network.txt  skel_sp-gies-adj_mat.csv  subgraph_sp-gies-adj_mat.csv  target_index.csv  targets.csv
sp_gies/: __init__.py  sp_gies.py  utils.py
(+9 files in other folders)
