[metadata]
name = SP-GIES
version = attr: sp_gies.__version__
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = https://github.com/shahashka/SP-GIES
author = Ashka Shah
author_email = shahashka@uchicago.edu
license = MIT License

[options]
include_package_data = True
packages = find:
