[metadata]
name = sp_gies
version = attr: sp_gies.__version__
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = https://github.com/shahashka/SP-GIES
author = Ashka Shah
author_email = shahashka@uchicago.edu
license = MIT License

[options]
include_package_data = True
packages = sp_gies
install_requires =
    causaldag
    cdt==0.6.0
    graphical_models
    conditional_independence
    matplotlib==3.5.*
    networkx==2.8.*
    numpy
    argparse
    pandas==1.*
    scikit-learn==1.*
    scipy==1.9.*
    rpy2==3.5.*
python_requires = >=3.8
[options.packages.find]
exclude =
    data
    cupc
    examples
    R_scripts
    CausalDiscoveryToolbox

